--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,10 @@ body {
     /*display:none;*/
 }
 
+.page[role="editor"]{
+    height:100%;
+}
+
 #menu {
     z-index: 10;
 }
@@ -53,6 +57,9 @@ body {
     animation: currentToRight 0.4s forwards;
 }
 
-
-
+.app-container{
+    overflow: scroll;
+    width: 100%;
+    height: 100%;
+}
 
