Audio Recording  and saving added

--- a/css/app.css
+++ b/css/app.css
@@ -201,8 +201,13 @@ body {
     width:80%;
 }
 
+form[name="audioTrack"] {
+    margin: 10% 0% 0% 15%;
+}
 
-
+img.mu-settings {
+    max-width: 18%;
+}
 
 
 /***
