--- a/css/headers.css
+++ b/css/headers.css
@@ -124,7 +124,7 @@ section[role="region"] header h2 {
 
 section[role="region"] > header:first-child {
     color: #fff;
-    background-color: #f97c17;
+    background: -moz-linear-gradient(top, #ff5b18 0%, #ff463e 100%); /* FF3.6+ */
 }
 
 section[role="region"] > header:first-child h1 {
