--- a/css/animation.css
+++ b/css/animation.css
@@ -37,7 +37,27 @@
     }
 }
 
+/*--------- Panel Animation ---------*/
 
+@keyframes bgChange {
+    from {
+        background-color: white;
+    }
+    to {
+        background-color: #ff463e;
+    }
+}
+
+@keyframes popUp {
+    from {
+        opacity: 0;
+        margin-top: 40px;
+    }
+    to {
+        opacity: 1;
+        margin-top: 0px;
+    }
+}
 
 
 
